# tagdiff

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  STARTUP.md  pyproject.toml
.github/workflows/: publish.yml
tagdiff/: __init__.py  analyze.py  cache.py  changelog.py  cli.py  config.py  core.py  formatter.py  github.py  issues.py  llm.py  pkgcompare.py  releases.py  search.py
