[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tagdiff"
version = "0.1.0"
description = "Compare GitHub release changelogs between tags"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "litellm>=1.0.0",
]

[project.scripts]
tagdiff = "tagdiff.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tagdiff*"]
